{
  "version": 4,
  "terraform_version": "1.1.9",
  "serial": 17,
  "lineage": "3d072755-3daf-2588-160a-a7d110685a41",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "cloud_engine_EIP",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-088850548203b8291",
            "association_id": "eipassoc-052cf24b5a1713adf",
            "domain": "vpc",
            "id": "eipalloc-088850548203b8291",
            "network_border_group": "eu-west-1",
            "network_interface": "eni-0ee91aa1e970e216e",
            "private_dns": "ip-10-0-1-198.eu-west-1.compute.internal",
            "private_ip": "10.0.1.198",
            "public_dns": "ec2-54-77-252-83.eu-west-1.compute.amazonaws.com",
            "public_ip": "54.77.252.83",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "cloud_engine_eip"
            },
            "tags_all": {
              "Name": "cloud_engine_eip"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "cloud_IGW",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:366536524979:internet-gateway/igw-0de3769fc69c359c1",
            "id": "igw-0de3769fc69c359c1",
            "owner_id": "366536524979",
            "tags": {
              "Name": "cloud_IGW"
            },
            "tags_all": {
              "Name": "cloud_IGW"
            },
            "vpc_id": "vpc-0393628b9ad13679d"
          },
          "dependencies": [
            "aws_vpc.Cloud_engine"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "cloud_NGW_pubsub",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-088850548203b8291",
            "connectivity_type": "public",
            "id": "nat-00c3a91c84f172b52",
            "network_interface_id": "eni-0ee91aa1e970e216e",
            "private_ip": "10.0.1.198",
            "public_ip": "54.77.252.83",
            "subnet_id": "subnet-0bec89aedd787a0d1",
            "tags": {
              "Name": "cloud_NGW_pubsub"
            },
            "tags_all": {
              "Name": "cloud_NGW_pubsub"
            }
          },
          "dependencies": [
            "aws_eip.cloud_engine_EIP",
            "aws_subnet.cloud_subnet",
            "aws_vpc.Cloud_engine"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "cloud_NGW_pubsub_private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "connectivity_type": "private",
            "id": "nat-082a4ca1228a4ebb6",
            "network_interface_id": "eni-0fbbfa2e27f9797ed",
            "private_ip": "10.0.4.88",
            "subnet_id": "subnet-03c924ced1b1b2f08",
            "tags": {
              "Name": "cloud_NGW_pubsub_private"
            },
            "tags_all": {
              "Name": "cloud_NGW_pubsub_private"
            }
          },
          "dependencies": [
            "aws_subnet.cloud_private_subnet",
            "aws_vpc.Cloud_engine"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "cloud_IGW_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0de3769fc69c359c1",
            "id": "r-rtb-06ed83722609280a01080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-06ed83722609280a0",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.cloud_IGW",
            "aws_route_table.cloud_route_table",
            "aws_vpc.Cloud_engine"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "cloud_private_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:366536524979:route-table/rtb-07063f3c0259ec3b3",
            "id": "rtb-07063f3c0259ec3b3",
            "owner_id": "366536524979",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "cloud_private_route_table"
            },
            "tags_all": {
              "Name": "cloud_private_route_table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0393628b9ad13679d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.Cloud_engine"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "cloud_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:366536524979:route-table/rtb-06ed83722609280a0",
            "id": "rtb-06ed83722609280a0",
            "owner_id": "366536524979",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0de3769fc69c359c1",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "cloud_route_table"
            },
            "tags_all": {
              "Name": "cloud_route_table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0393628b9ad13679d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.Cloud_engine"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "cloud_private_route_table_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ab64086d9df8de1b",
            "route_table_id": "rtb-07063f3c0259ec3b3",
            "subnet_id": "subnet-03c924ced1b1b2f08"
          },
          "dependencies": [
            "aws_route_table.cloud_private_route_table",
            "aws_subnet.cloud_private_subnet",
            "aws_vpc.Cloud_engine"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "cloud_route_table_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0704e0528c2b292c7",
            "route_table_id": "rtb-06ed83722609280a0",
            "subnet_id": "subnet-0bec89aedd787a0d1"
          },
          "dependencies": [
            "aws_route_table.cloud_route_table",
            "aws_subnet.cloud_subnet",
            "aws_vpc.Cloud_engine"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "cloud_private_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:366536524979:subnet/subnet-03c924ced1b1b2f08",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1b",
            "availability_zone_id": "euw1-az3",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03c924ced1b1b2f08",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "366536524979",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "cloud_private_subnet"
            },
            "tags_all": {
              "Name": "cloud_private_subnet"
            },
            "vpc_id": "vpc-0393628b9ad13679d"
          },
          "dependencies": [
            "aws_vpc.Cloud_engine"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "cloud_private_subnet_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:366536524979:subnet/subnet-016a3ec7e0d6bdcc1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1c",
            "availability_zone_id": "euw1-az1",
            "cidr_block": "10.0.5.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-016a3ec7e0d6bdcc1",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "366536524979",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "cloud_private_subnet_2"
            },
            "tags_all": {
              "Name": "cloud_private_subnet_2"
            },
            "vpc_id": "vpc-0393628b9ad13679d"
          },
          "dependencies": [
            "aws_vpc.Cloud_engine"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "cloud_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:366536524979:subnet/subnet-0bec89aedd787a0d1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0bec89aedd787a0d1",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "366536524979",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "cloud_engine"
            },
            "tags_all": {
              "Name": "cloud_engine"
            },
            "vpc_id": "vpc-0393628b9ad13679d"
          },
          "dependencies": [
            "aws_vpc.Cloud_engine"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "cloud_subnet_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:366536524979:subnet/subnet-03d107dfea6d8ca50",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1b",
            "availability_zone_id": "euw1-az3",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03d107dfea6d8ca50",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "366536524979",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "cloud_engine_2"
            },
            "tags_all": {
              "Name": "cloud_engine_2"
            },
            "vpc_id": "vpc-0393628b9ad13679d"
          },
          "dependencies": [
            "aws_vpc.Cloud_engine"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "cloud_subnet_3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:366536524979:subnet/subnet-02b134734064adf32",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1c",
            "availability_zone_id": "euw1-az1",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02b134734064adf32",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "366536524979",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "cloud_engine_3"
            },
            "tags_all": {
              "Name": "cloud_engine_3"
            },
            "vpc_id": "vpc-0393628b9ad13679d"
          },
          "dependencies": [
            "aws_vpc.Cloud_engine"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "Cloud_engine",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:366536524979:vpc/vpc-0393628b9ad13679d",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0f60cdf6c980b814b",
            "default_route_table_id": "rtb-06c8068f8f8bb9e0b",
            "default_security_group_id": "sg-00c8f331e5c99b784",
            "dhcp_options_id": "dopt-0bda92de9d1e22902",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0393628b9ad13679d",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-06c8068f8f8bb9e0b",
            "owner_id": "366536524979",
            "tags": {
              "Name": "cloud_engine"
            },
            "tags_all": {
              "Name": "cloud_engine"
            }
          }
        }
      ]
    }
  ]
}